--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,17 +3,17 @@ version: "3.7"
 services:
   app:
     build: .
-    container_name: "node"
+    container_name: node
     command: yarn dev
     ports:
-      - "3333:3333"
+        - 3333:3333
     environment:
-      - DB_HOST=database
+        - DB_HOST=database
     volumes:
-      - ".:/usr/app"
+        - .:/usr/app
 
   database:
     image: mongo
-    container_name: "mongo"
+    container_name: mongo
     ports:
-        - "27017:27017"
+        - 27017:27017
