--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,3 +17,9 @@ services:
     container_name: mongo
     ports:
         - 27017:27017
+    volumes:
+        - db_data:/data/db
+        # - ./.docker/mongodb/mongod.conf:/etc/mongod.conf
+        # - ./.docker/mongodb/initdb.d/:/docker-entrypoint-initdb.d/
+        # - ./.docker/mongodb/data/db/:/data/db/
+        # - ./.docker/mongodb/data/log/:/var/log/mongodb/
